# toymodels

./: .gitignore  .gitmodules  AddApplicationProject.cmake  AddLibraryProject.cmake  CMakeLists.txt  GenerateVS2017Solution.bat  LICENSE  README.md
shader/: Random.hlsl  RandomUnitVectorPS.hlsl  Screen.h  ScreenVS.hlsl  Util.hlsl
shader/atmosphere/: AddScatteringPS.hlsl  Atmosphere.h  AtmosphereConstants.h  AtmosphericScattering.hlsl.h  AtmosphericScatteringPS.hlsl  GatherInscatterPS.hlsl  MultipleScatteringPS.hlsl  OpticalDepthPS.hlsl  PackInscatterPS.hlsl  SingleScatteringPS.hlsl  TotalInscatterPS.hlsl
shader/helloworld/: HelloWorld.h  OffScreen2dPS.hlsl  OffScreen3dPS.hlsl  ScreenPS.hlsl
shader/noise/: TilableNoise2dPS.hlsl  TilableNoise3dPS.hlsl
src/app/PrecomputedAtmosphericScattering/: CMakeLists.txt  Camera.h  InputEvent.h  main.cpp
src/app/PureLatticeGaugeModel/: CMakeLists.txt  main.cpp
src/app/helloworld/: CMakeLists.txt  InputEvent.h  main.cpp
src/lib/etc/: CMakeLists.txt  EventHandler.hpp
src/lib/gpu/: CMakeLists.txt  DirectXUtil.hpp  FullScreenTriangle.cpp  FullScreenTriangle.hpp  GPU.hpp  GPUExports.hpp  Render.cpp  Render.hpp  TextureIO.cpp  TextureIO.hpp
src/lib/math/: CMakeLists.txt  Math.hpp  SO3.hpp
src/lib/window/: CMakeLists.txt  Log.cpp  Log.hpp  Window.cpp  Window.hpp  WindowExport.hpp
src/test/lib/math/: CMakeLists.txt  main.cpp
